# time_sync_master_slave

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  error.c  error.h  main.c  sock.c  sock.h  str.c
aids/: calc.c  calc.h  str.c  str.h
master/: master.c  master.h
scripts/: run_on_pi.sh  start.sh
slave/: slave.c  slave.h
tests/puls_to_gpio/: gpio_setup.c  gpio_setup.h  main.c  test
